[package]
name = "peekaboo"
version = "0.1.0"
description = "Peekaboo — Interactive streamer overlay"
authors = ["you"]
license = "MIT"
repository = "https://github.com/you/peekaboo"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "devtools",
] }
tauri-plugin-global-shortcut = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Windows-only: for click-through via raw Win32 API
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

# macOS-only
[target.'cfg(target_os = "macos")'.dependencies]
cocoa    = "0.25"
objc     = "0.2"

[profile.release]
panic   = "abort"   # smaller binary
codegen-units = 1   # better optimization
lto     = true
opt-level = "s"     # optimize for size
